<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:background="#00ffffff"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@color/main_lastTransaction_bg"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true">

            <TextView android:text="@string/main_lastTransaction"
                android:id="@+id/main_last_transaction"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:textColor="@color/textWhite"
                android:textSize="17sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@color/main_lastTransaction_bg_1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:id="@+id/last_transaction_1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_history_image_send_pay"
                android:src="@mipmap/main_last_transaction_send_pay_icon"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingLeft="@dimen/main_LastTransaction_paddingLeft"/>

            <TextView android:text="@string/main_lastTransaction_send"
                android:id="@+id/main_history_features1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingLeft="@dimen/main_LastTransaction_paddingLeftcolumn2"
                android:textColor="@color/textWhite"
                android:textSize="13sp"
                android:width="80dp" />

            <TextView android:text="PT. Lazada E-Com..."
                android:id="@+id/main_history_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingRight="@dimen/main_LastTransaction_paddingRightcolumn3"
                android:textColor="@color/textWhite"
                android:textSize="15sp"
                android:width="160dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="20dp">

                <TextView android:text="Rp 300.000"
                    android:id="@+id/main_history_total1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/textWhite"
                    android:textSize="12sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:width="120dp"
                    />

                <TextView android:text="20 OCT 2015"
                    android:id="@+id/main_history_date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/textWhite"
                    android:textSize="10sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:width="120dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@color/main_lastTransaction_bg_2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:id="@+id/last_transaction_2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_history_image_receive"
                android:src="@mipmap/main_last_transaction_receive_icon"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingLeft="@dimen/main_LastTransaction_paddingLeft"/>

            <TextView android:text="@string/main_lastTransaction_receive"
                android:id="@+id/main_history_features2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingLeft="@dimen/main_LastTransaction_paddingLeftcolumn2"
                android:textColor="@color/textWhite"
                android:textSize="13sp"
                android:width="80dp" />

            <TextView android:text="Dhuta Pratama"
                android:id="@+id/main_history_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingRight="@dimen/main_LastTransaction_paddingRightcolumn3"
                android:textColor="@color/textWhite"
                android:textSize="15sp"
                android:width="160dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="20dp">

                <TextView android:text="Rp 240.000"
                    android:id="@+id/main_history_total2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/textWhite"
                    android:textSize="12sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:width="120dp"
                    />

                <TextView android:text="20 OCT 2015"
                    android:id="@+id/main_history_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/textWhite"
                    android:textSize="10sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:width="120dp"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:background="@color/main_lastTransaction_bg_3"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:id="@+id/last_transaction_3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_history_image_topup"
                android:src="@mipmap/main_last_transaction_topup_icon"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingLeft="@dimen/main_LastTransaction_paddingLeft"/>

            <TextView android:text="@string/main_lastTransaction_topup"
                android:id="@+id/main_history_features3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingLeft="@dimen/main_LastTransaction_paddingLeftcolumn2"
                android:textColor="@color/textWhite"
                android:textSize="13sp"
                android:width="80dp"/>

            <TextView android:text="Indomaret"
                android:id="@+id/main_history_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/main_lastTransaction_padding"
                android:paddingBottom="@dimen/main_lastTransaction_padding"
                android:paddingRight="@dimen/main_LastTransaction_paddingRightcolumn3"
                android:textColor="@color/textWhite"
                android:textSize="15sp"
                android:width="160dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="20dp">

                <TextView android:text="Rp 27.400"
                    android:id="@+id/main_history_total3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/textWhite"
                    android:textSize="12sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:width="120dp"
                    />

                <TextView android:text="20 OCT 2015"
                    android:id="@+id/main_history_date3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/textWhite"
                    android:textSize="10sp"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:width="120dp"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>